SOURCE/objects/Payor__c.object
<CustomObject>
    <fields>
        <fullName>Allowable_Detox__c</fullName>
        <label>Allowable Detox</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_IOP__c</fullName>
        <label>Allowable IOP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_ITR__c</fullName>
        <label>Allowable IPR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_OP__c</fullName>
        <label>Allowable OP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_PHP__c</fullName>
        <label>Allowable PHP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_RTC__c</fullName>
        <label>Allowable RTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowable_Residential__c</fullName>
        <label>Allowable Residential</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payor_ID__c</fullName>
        <label>Payor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>